--- a/gb/nf3046_3.md
+++ b/gb/nf3046_3.md
@@ -31,7 +31,7 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/10/1/n11559279.md#1" target="_blank">中共窃政70年 中华儿女声明退党团少先队</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/10/1/n11559279.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/130518194335815-150x120.jpg" align ="left"></a>中共建政70周年之际，许多大陆民众看清了中共的真面目，不希望与中共捆绑、为伍作恶，纷纷在大纪元退党网站上声明退出中国共产党、团、少先队。该网站自2004年12月开通以来，已经累积了3亿4千多万人声明退出中共一切组织。一位不具名的红二代向大纪元表示，近期香港事件让人看出中共邪恶本质，是退党的催化剂。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月05日 2:32 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/10/2/n11561511.md#1" target="_blank">马国民众声援三退大潮 谴责中共在港暴行</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/10/2/n11561511.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/01-20190929-Mal-TD-IMG_2141-R-150x120.jpg" align ="left"></a>在刚过的周末（9月29日）下午，马来西亚退党服务中心义工们来到了首都吉隆坡市中心，在人山人海的武吉免登区（Bukit Bintang）举行集会，和民众一起声援3亿4千2百万退出共产党、共青团和少先队的“三退”勇士们；同时抗议中共黑手暴力攻击香港法轮功学员，制造流血事件。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月02日 10:11 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/10/1/n11559592.md#1" target="_blank">中共篡政70年 凌晓辉：从反送中看到希望</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/10/1/n11559592.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/01/1201150518552519-150x120.jpg" align ="left"></a>为了“国庆70周年”，本应与国同庆的人民却被控制，除了商场不能卖菜刀外，小饭馆被强制停业，医院不准收留病人，长安街附近的居民不能用燃气，甚至，上公厕都要实名登记……有评论表示，如今的中国不是中国人民的，所以这不是国庆，而是国殇。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月01日 6:16 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/9/30/n11558127.md#1" target="_blank">中共随时戒严 泛民及民阵4人发起十一大游行</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/9/30/n11558127.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/WhatsApp_Image_2019-10-01_at_12417_AM@1200x1200-150x120.jpeg" align ="left"></a>9月30日下午，三名香港民主派前议员李卓人、何俊仁、梁国雄以及民阵副召集人陈皓桓宣布，四人将以个人身份，承接民阵原来游行路线，于10月1日下午1时由铜锣湾东角道集合，游行到中环遮打道行人专用区。他们表示，此为公民抗命举动，清楚法律后果。他们四人随时都有被捕的危机。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月01日 3:11 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/10/27/n11614866.md#1" target="_blank">每日三退声明精选（2019/10/26）</a><br></h3>我今天郑重宣布退出少先队和共青团。这都要归功于我今年去海外留学，看到了真正的新闻，真正的历史。我决定切断和中共这个充满谎言的人权杀手的联系！希望民主早日光复中国大陆！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月27日 11:48 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/10/26/n11613254.md#1" target="_blank">每日三退声明精选（2019/10/25）</a><br></h3>就允许我化名李海鸥吧。我以前真的被中共骗得很惨。我真的很谢谢大纪元，因为后来翻墙看到的很多民运人士和主张独立的人士很多不讲灭共，也不肯讲反共，甚至还替中共，只有你们大纪元真正把中共和全球左翼的思潮的联系讲清楚了。谢谢你们让我看到中共的邪恶。大彻大悟的我今天在这里下定决心，彻底退出中共党团队，并且支持你们反共的行动。中共和共产邪说正如你们所说，是我们这个时代的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月26日 10:56 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/10/24/n11608376.md#1" target="_blank">每日三退声明精选（2019/10/23）</a><br></h3>声明退出曾加入过的少先队组织。来美国五年了，在这里看到了真相，明白了大陆的宣传都是假的。自己有朋友修炼法轮功，2003年被非法关押在劳教所，去看望她时，看到她被戴上手铐和脚镣，这样对待她，想起她自己就想流泪。共产党太残忍了，迫害好人。自己也是受共产党迫害，因为不听共产党那一套，被免除公职。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月24日 11:17 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/10/23/n11606126.md#1" target="_blank">每日三退声明精选（2019/10/22）</a><br></h3>名字为化名，本人从小受到了党匪的宣传，认为入党是件“特别的光荣”。18岁去当兵入伍，军事成绩优秀，被发展为中共党员。退伍后，工作多年，发现这个共产党全是谎言。本人工作的内容也用党的宣传有关系，宣传的都是党的“丰功伟绩”，不坏的一律不许发表。近一年来，通过翻墙，看到了很多共产党的真相，也了解了一些法轮功的真相。对当初加入共产党特别特别的后悔，发自内心的要求退党.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月23日 11:29 AM							</td></tr>
