--- a/gb/news392_4.md
+++ b/gb/news392_4.md
@@ -21,7 +21,6 @@
 12月21日，大纪元新唐人媒体集团在曼哈顿举办“决战2020 时事论坛”，旅美政论家陈破空、美国普林斯顿大学博士程晓农、川普华裔筹款官楼新跃、美国艾德菲大学政治学教授王维正、香港资深银行家吴明德、香港《前哨》杂志总编辑刘达文，美国飞天大学人文与科学副教授章天亮，应邀发.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 5:35 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11748173.md#1" target="_blank">高天韵：南亚海啸15年 2020灾害预言会否成真</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11748173.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-51933143-150x120.jpg" align ="left"></a>12月23日，英国《镜报》介绍了已逝的保加利亚盲人预言家巴巴·万加（Baba Vanga）对2020年进行的一些预测，其中提到亚洲在这一年将遭遇更多海啸和地震，前景苍凉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 5:00 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11748518.md#1" target="_blank">洪微：2020中国人最期待的预言</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11748518.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2005/12/512020308481671-150x120.jpg" align ="left"></a>预言，是对未来将发生的事情，所做出的预报或者断言，通常，是具有非凡预知超能力的人，通过神力或者非凡的能力，对未来即将出现事实的宣布。预言，也通常与所谓的现代科学规律相悖，或者不符合所谓的逻辑推断。所以，很多人不相信预言，即使真的应验，也被认为是巧合。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 3:36 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/29/n11753239.md#1" target="_blank">【名家专栏】共同核心标准仍在破坏美国教育</a><br></h3>也许没有什么比“共同核心标准”（Common Core standards）更能使美国人从对政府教育的麻木状态中苏醒过来。所谓的“共同核心标准”是由左翼奥巴马政府悄悄强加给国家的，用税收的钱来“行贿”，并且是强制性的。人民对此愤怒﹐川普（特朗普）称这些标准是“一场彻底的灾难”﹐但愤怒只触及了问题的表面。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 10:26 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/29/n11753177.md#1" target="_blank">杜彼得：圣诞亮点暗去 余烬比伤口漫长</a><br></h3>专栏的作用，很多时候只是供品味足的读者参考，但其重要的分野有职业与业余之分，如果是职业的，为了生存除了要勤于搜集资料之外，文章必须迎合读者与市场的需要，民以食为天，作者不可能全家饿着肚子讲“良知”却饿死在荒郊野地。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 9:11 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/29/n11752359.md#1" target="_blank">金浴凤：末日叹</a><br></h3>旷日贸易战，土共忒心烦
 梦里惊香港，醒来愁台湾
@@ -64,5 +63,6 @@
 坏事做绝背里干
 台上装傻又装蒜......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 7:39 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/21/n11737584.md#1" target="_blank">李旭彤：挖掘五千年文明惊世宝藏（11）</a><br></h3>近代科学的很多数学科都是从两个个体间的相互作用开始的。如牛顿力学第一定律，经济学的供给方与需求方，制度经济学中的规制与被规制等。但是在这些科学中，作用模型都是不同，并未发展出两个个体相互作用的一般模型。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 6:18 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11748482.md#1" target="_blank">赵洪江：支撑香港 砥砺前行</a><br></h3>这一周，是令自由与民主之士深受鼓舞的一周：美众议院外交事务委员会一致通过《西藏政策支持法案》，若该法案在众议院参议院通过并获得总统签署为法律，那么人类的自由与文明将更加光明。该项法案在众议院的通过，也是支撑香港人追求自由与民主的信心。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 1:35 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/news392_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ffbns289/djy/blob/master/gb/news392_4.md#1<br><a href="https://github.com/ffbns289/djy/blob/master/gb/news392_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ffbns289/djy/blob/master/gb/news392_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_4.htm">http://www.epochtimes.com/gb/news392_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
